# Tyto

./: .gitignore  AGENTS.md  README.md  prompt.md  pyproject.toml
.kiro/hooks/: check-specs-on-delete.kiro.hook  check-specs-sync.kiro.hook  confidence-check.kiro.hook
.kiro/specs/: base_task.md  user_task.md
.kiro/specs/collapse-arrow-distortion-fix/: design.md  requirements.md  tasks.md
.kiro/specs/collapse-visual-bugfix/: design.md  requirements.md  tasks.md
.kiro/specs/menu-collapse-toggle/: design.md  requirements.md  tasks.md
.kiro/specs/menu-component/: design.md  requirements.md  (+1 more)
docs/: component-events.md  missing-events-vs-naiveui.md  missing-events-vs-qt.md
examples/: __init__.py  gallery.py  playground.py
examples/gallery/: __init__.py  __main__.py
examples/playground/: __init__.py  __main__.py
src/tyto_ui_lib/: __init__.py
tests/: conftest.py
tests/test_atoms/: test_backtop.py  test_button.py  test_checkbox.py  test_checkbox_group.py  test_empty.py  test_input.py  test_inputnumber.py  test_radio.py  test_radio_enhanced.py  test_slider.py  test_spin.py  test_switch.py  test_tag.py
tests/test_common/: test_base_widget.py  test_container_query.py  test_mixins.py
tests/test_core/: test_dark_mode.py  test_design_tokens.py  test_easing_engine.py  test_event_bus.py  test_theme_engine.py
tests/test_molecules/: test_alert.py  test_breadcrumb.py  test_collapse.py  test_inputgroup.py  test_searchbar.py
tests/test_organisms/: __init__.py  test_card.py  test_layout.py  test_menu.py  test_menu_collapse_toggle.py  test_message.py  test_modal.py
(+184 files in other folders)
